Add procesing label for promotional feature item
If not all assets are uploaded, the image load won't be sent to publishing api.
In order to make it known to the user that this might be the case, we display a
PROCESSING label when image assets are still uploading.

The label will stay on indefinitely if something is wrong with an asset upload.

--- a/app/views/admin/promotional_feature_items/_form_fields.html.erb
+++ b/app/views/admin/promotional_feature_items/_form_fields.html.erb
@@ -53,6 +53,7 @@
         image_cache: form.object.image_cache.presence,
         image_src: form.object.image.url,
         image_alt: form.object.image_alt_text,
+        image_uploaded: form.object.all_asset_variants_uploaded?,
       }),
     },
     {
