Extend UserOrderableExtension to reorder with validations & add assoications
This extends the module by adding a new #reorder! method which uses #update!
in place of #update_column the majority of the remaining models which
can be reorderd by a user.

I've checked these models over for db or model level unique constraints on
ordering. None of them have them.

I've also checked them for expensive callbacks. None of these have them.

So I think they're all fine to use #update!

--- a/app/views/admin/document_collection_group_memberships/reorder.html.erb
+++ b/app/views/admin/document_collection_group_memberships/reorder.html.erb
@@ -10,6 +10,7 @@
         margin_bottom: 4,
       } %>
       <%= render "govuk_publishing_components/components/reorderable_list", {
+        input_name: "document_collection_group_memberships[ordering]",
         items: @group.memberships.map do |membership|
           {
             id: membership.id,
