Add procesing label for topical event
If not all assets are uploaded, the image load won't be sent to publishing api.

In order to make it known to the user that this might be the case, we display a
PROCESSING label when image assets are still uploading.

The label will stay on indefinitely if something is wrong with an asset upload.

--- a/app/views/admin/topical_events/_form.html.erb
+++ b/app/views/admin/topical_events/_form.html.erb
@@ -54,7 +54,8 @@
         image_src: topical_event.logo.url,
         image_alt: topical_event.logo_alt_text,
         image_cache_name: "topical_event[logo_attributes][file_cache]",
-        image_cache: (topical_event.logo.file_cache.presence),
+        image_cache: topical_event.logo.file_cache.presence,
+        image_uploaded: topical_event.logo.all_asset_variants_uploaded?,
       } %>
     <% end %>
   </div>
