--- a/app/views/admin/editionable_worldwide_organisations/_form.html.erb
+++ b/app/views/admin/editionable_worldwide_organisations/_form.html.erb
@@ -6,7 +6,8 @@
     id: "associations",
   } do %>
     <div class="govuk-!-margin-bottom-4">
-      <%= render "organisation_fields", form: form, edition: edition %>
+      <%= render "world_location_fields", form: form, edition: edition %>
+      <%= render "organisation_fields", form: form, edition: edition, required: true %>
     </div>
   <% end %>
 <% end %>
