Improve accessibility of search results
Part of fixes emerging from the accessibility review:
> Add an aria-label to better identify the search results.
> Make the cells in the first column of the search results table into headers

--- a/app/views/admin/editions/index.html.erb
+++ b/app/views/admin/editions/index.html.erb
@@ -7,7 +7,7 @@
     <%= render "filter_options", filter_action: admin_editions_path %>
   </div>
   <div class="govuk-grid-column-two-thirds">
-    <div class="app-view-edition-index__table">
+    <div class="app-view-edition-index__table" aria-label="Search results">
       <%= render "search_results", filter: @filter, paginator: @filter.editions, show_export: true %>
     </div>
   </div>
