--- a/app/views/admin/featurable_editions/_search_results.html.erb
+++ b/app/views/admin/featurable_editions/_search_results.html.erb
@@ -39,6 +39,7 @@
           },
         ]
       end,
+    first_cell_is_header: true,
   } %>
 
   <%= paginate(paginator, anchor: anchor, theme: "govuk_paginator") %>
