--- a/app/views/admin/shared/_featurable_editions.html.erb
+++ b/app/views/admin/shared/_featurable_editions.html.erb
@@ -8,7 +8,7 @@
     <%= render "admin/editions/filter_options", filter_by:, filter_action:, anchor: %>
   </div>
   <div class="govuk-grid-column-two-thirds">
-    <div class="app-view-features-search-results__table">
+    <div class="app-view-features-search-results__table" aria-label="Search results">
       <%= render "admin/featurable_editions/search_results", featurable_editions:, paginator:, anchor:, feature_path: %>
     </div>
   </div>
