Fix typo in partial name
This partial was renamed from `world_locations/list` to
`admin/world_location_news/list` when the WorldLocation model was split
into two parts.

Additionally, a route helper within the partial was renamed.

It appears the name of this partial was not updated here, and only just
became apparent when a somewhat related test was added part way through
development of the editionable worldwide organisations.

--- a/app/views/admin/editions/_conflict.html.erb
+++ b/app/views/admin/editions/_conflict.html.erb
@@ -20,7 +20,7 @@
 <% if edition.can_be_associated_with_world_locations? %>
   <h2 class="govuk-heading-m">World locations</h2>
   <% if edition.world_locations.any? %>
-    <%= render "world_locations/list", world_locations: edition.world_locations %>
+    <%= render "admin/world_location_news/list", world_locations: edition.world_locations %>
   <% else %>
     <p class="govuk-body">This document isn’t assigned to any world locations.</p>
   <% end %>
