Allow roles to be associated with Editionable Worldwide Organisations
This is a change from the current behaviour, as the worldwide
organisations are currently assigned on the role's edit page.

By moving this to be the other way round (i.e. the edit is made on the
worldwide organisation itself), the option is more obvious to the user
and allows the change to be made in advance (e.g. as part of scheduled
publishing).

--- a/app/views/admin/editionable_worldwide_organisations/_form.html.erb
+++ b/app/views/admin/editionable_worldwide_organisations/_form.html.erb
@@ -7,6 +7,7 @@
   } do %>
     <div class="govuk-!-margin-bottom-4">
       <%= render "world_location_fields", form: form, edition: edition %>
+      <%= render "role_fields", form: form, edition: edition %>
       <%= render "organisation_fields", form: form, edition: edition, required: true %>
     </div>
   <% end %>
