Add form for editing editionable social media links
This allows editing of editionable social media links.

The form has been extracted into a partial so it can be used again in
the create form.

This form is generic so it can be used for any editionable documents
that are associated with social media links, not just worldwide
organisations.

--- a/app/views/admin/editionable_social_media_accounts/index.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/index.html.erb
@@ -32,6 +32,12 @@
             {
               key: "Account",
               value: social_media_account.title,
+              actions: [
+                {
+                  label: "Edit",
+                  href: edit_admin_edition_social_media_account_path(@edition, social_media_account),
+                },
+              ],
             },
           ],
         } %>
