--- a/app/views/admin/editionable_social_media_accounts/index.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/index.html.erb
@@ -15,7 +15,7 @@
     } %>
 
     <p class="govuk-body">
-      <%= link_to "Add new social media account", "#", class: "govuk-link govuk-link--no-visited-state" %>
+      <%= link_to "Add new social media account", new_admin_edition_social_media_account_path(@edition), class: "govuk-link govuk-link--no-visited-state" %>
     </p>
 
     <%= render "govuk_publishing_components/components/heading", {
