--- a/app/views/admin/editionable_social_media_accounts/edit.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/edit.html.erb
@@ -3,6 +3,6 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= render("form", edition: @edition, social_media_account: @social_media_account) %>
+    <%= render("form", edition: @edition, social_media_account: @social_media_account, destination: admin_edition_social_media_account_path(@edition, @social_media_account)) %>
   </div>
 </div>
