Add form for deleting editionable social media accounts
This form is generic so it can be used for any editionable documents
that are associated with social media links, not just worldwide
organisations.

--- a/app/views/admin/editionable_social_media_accounts/index.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/index.html.erb
@@ -37,6 +37,11 @@
                   label: "Edit",
                   href: edit_admin_edition_social_media_account_path(@edition, social_media_account),
                 },
+                {
+                  label: "Delete",
+                  href: confirm_destroy_admin_edition_social_media_account_path(@edition, social_media_account),
+                  destructive: true,
+                },
               ],
             },
           ],
