Allow translations of social media accounts to be edited
This allows users to edit the translations of social media accounts that
are associated with editions.

--- a/app/views/admin/editionable_social_media_accounts/_form.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/_form.html.erb
@@ -39,6 +39,8 @@
         error_items: errors_for(social_media_account.errors, :title),
       } %>
 
+      <%= form.hidden_field :locale, value: I18n.locale %>
+
       <div class="govuk-button-group govuk-!-margin-top-8">
         <%= render "govuk_publishing_components/components/button", {
           text: "Save",
