Move delete button for social media accounts
Moves the delete button for social media accounts that are associated
with editions to be alongside the account, rather than next to each
translation.

This is because we want to delete the social media account overall, not
just a specific translation.

Matches the location of the button for social media accounts that are
not associated with editions.

--- a/app/views/admin/editionable_social_media_accounts/index.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/index.html.erb
@@ -29,6 +29,7 @@
         <%= render "components/summary_card", {
           title: social_media_account[:title],
           rows: social_media_account[:rows],
+          summary_card_actions: social_media_account[:summary_card_actions],
         } %>
       <% end %>
     <% else %>
