Fix typo in page title

--- a/app/views/admin/editionable_social_media_accounts/index.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title, "Social media accounts for #{@edition.title}" %>
-<% content_for :title, "Social media accounts for for #{@edition.title}" %>
+<% content_for :title, "Social media accounts for #{@edition.title}" %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
