--- a/app/views/admin/more/index.html.erb
+++ b/app/views/admin/more/index.html.erb
@@ -7,6 +7,7 @@
     <%= render "govuk_publishing_components/components/list", {
       items: [
         admin_cabinet_ministers_link,
+        admin_emergency_banner_link,
         admin_fields_of_operation_link,
         admin_get_involved_link,
         admin_governments_link,
