Render link to edit an organisations access on doc search page
This ensures that links render in the following way:

When the user is a GDS Admin:

- renders the view document and edit access links if edition belongs to
their org (GDS)
- renders the edit access link if the edition doesn't belong to their org

When the user is not a GDS Admin:

- renders the view link when the edition belongs to their org
- never renders the edit access link

--- a/app/views/admin/editions/_search_results.html.erb
+++ b/app/views/admin/editions/_search_results.html.erb
@@ -40,7 +40,7 @@
               text: render(Admin::Editions::TagsComponent.new(edition)),
             },
             {
-              text: link_to(sanitize("View #{tag.span(edition.title, class: 'govuk-visually-hidden')}"), admin_edition_path(edition), class: "govuk-link"),
+              text: search_results_table_actions(edition),
             },
           ]
         end,
